solve remarked problems